--- a/src/gtk/queue-row.ui
+++ b/src/gtk/queue-row.ui
@@ -50,21 +50,21 @@
                     <property name="hexpand">true</property>
                     <property name="spacing">3</property>
                     <child>
-                      <object class="GtkLabel" id="song_title_label">
+                      <object class="GtkInscription" id="song_title_label">
                         <property name="xalign">0</property>
-                        <property name="width-chars">30</property>
-                        <property name="max-width-chars">35</property>
-                        <property name="ellipsize">end</property>
+                        <property name="min-chars">25</property>
+                        <property name="nat-chars">30</property>
+                        <property name="text-overflow">ellipsize-end</property>
                         <style>
                           <class name="song-title"/>
                         </style>
                       </object>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="song_artist_label">
+                      <object class="GtkInscription" id="song_artist_label">
                         <property name="xalign">0</property>
-                        <property name="ellipsize">end</property>
-                        <property name="max-width-chars">35</property>
+                        <property name="nat-chars">30</property>
+                        <property name="text-overflow">ellipsize-end</property>
                         <style>
                           <class name="song-artist"/>
                         </style>
@@ -109,21 +109,21 @@
                     <property name="hexpand">true</property>
                     <property name="spacing">3</property>
                     <child>
-                      <object class="GtkLabel" id="selection_title_label">
+                      <object class="GtkInscription" id="selection_title_label">
                         <property name="xalign">0</property>
-                        <property name="width-chars">30</property>
-                        <property name="max-width-chars">35</property>
-                        <property name="ellipsize">end</property>
+                        <property name="text-overflow">ellipsize-end</property>
+                        <property name="min-chars">25</property>
+                        <property name="nat-chars">30</property>
                         <style>
                           <class name="song-title"/>
                         </style>
                       </object>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="selection_artist_label">
+                      <object class="GtkInscription" id="selection_artist_label">
                         <property name="xalign">0</property>
-                        <property name="max-width-chars">35</property>
-                        <property name="ellipsize">end</property>
+                        <property name="nat-chars">30</property>
+                        <property name="text-overflow">ellipsize-end</property>
                         <style>
                           <class name="song-artist"/>
                         </style>
